--- a/LiveMapDashboard.Web/Views/Rfc/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Rfc/Index.cshtml
@@ -1,22 +1,22 @@
-﻿@using LiveMapDashboard.Web.Models.Suggestions
-@using LiveMap.Domain.Models
-@model PoiSuggestionsViewModel
+﻿@using LiveMap.Domain.Models
+@using LiveMapDashboard.Web.Models.Rfc
+@model RFCsViewModel
 
 <div>
-    <h1 class="text-4xl dark:text-white">Gesuggereerde POI's</h1>
+    <h1 class="text-4xl dark:text-white">Wijzigingsverzoeken</h1>
     <br />
 
     <div class="flex flex-col">
         <div class="-m-1.5 overflow-x-auto">
             <div class="p-1.5 min-w-full inline-block align-middle">
-                @if (Model.SuggestedPointOfInterests.Length > 0)
+                @if (Model.RFCs.Length > 0)
                 {
                     <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
 
                         <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
                             <thead>
                                 <tr>
-                                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Titel</th>
+                                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Type</th>
                                     <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 dark:text-neutral-500">
                                         <button id="timeSort">
                                             <div class="flex flex-row items-center">
@@ -43,14 +43,21 @@
                                 </tr>
                             </thead>
                             <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                                @foreach (SuggestedPointOfInterest spoi in Model.SuggestedPointOfInterests)
+                                @foreach (RequestForChange rfc in Model.RFCs)
                                 {
                                     <tr>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
-                                            @spoi.Title
+                                            @if (rfc.PoiId == null)
+                                            {
+                                                <span>Wijzigingsverzoek</span>
+                                            }
+                                            else
+                                            {
+                                                <span>Nieuwe POI</span>
+                                            }
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
-                                            @PoiSuggestionsViewModel.ToDateTime(spoi.RFC?.SubmittedOn)
+                                            @RFCsViewModel.ToDateTime(rfc.SubmittedOn)
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
                                             <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">Aanpassen</button>
@@ -64,7 +71,7 @@
                 }
                 else
                 {
-                    <p class="dark:text-white">Er zijn geen gesuggereerde POI's</p>
+                    <p class="dark:text-white">Er zijn geen request for changes</p>
                 }
             </div>
         </div>
