--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -7,8 +7,10 @@
            class="bg-transparent hover:bg-transparent px-4 py-2 text-blue-500 hover:bg-blue-600">
             Go Back
         </a>
-        <form method="delete" asp-controller="poi" asp-action="delete">
+        <form method="post" asp-controller="poi" asp-action="Delete">
             @Html.AntiForgeryToken()
+            <input type="hidden" asp-for="Id" value="d2351a07-7c59-64fc-467a-000748f91a2b"/>
+            
             <button type="submit"
                     class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
                 Delete
