feat: add delete and go back modals

--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -3,37 +3,33 @@
 
 <div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
     <div class="flex justify-between">
-        <a href="javascript:history.back()"
-           class="bg-transparent hover:bg-transparent px-4 py-2 text-blue-500 hover:bg-blue-600">
-            Go Back
-        </a>
-        <form method="post" asp-controller="poi" asp-action="Delete">
-            @Html.AntiForgeryToken()
-            <input type="hidden" asp-for="Id" value="d2351a07-7c59-64fc-467a-000748f91a2b"/>
-            
-            <button type="submit"
-                    class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
-                Delete
-            </button>
-        </form>
+        @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_GoBack.cshtml")
+
+        @if (Model.Id != string.Empty)
+        {
+            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_Delete.cshtml", Model)
+        }
     </div>
 </div>
 
-<div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-    @if (ViewData["SuccessMessage"] != null)
-    {
-    <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
-        @ViewData["SuccessMessage"]
-    </div>
-    }
+@if (ViewData["SuccessMessage"] != null || ViewData["ErrorMessage"] != null)
+{
+    <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
+        @if (ViewData["SuccessMessage"] != null)
+        {
+            <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
+                @ViewData["SuccessMessage"]
+            </div>
+        }
 
-    @if (ViewData["ErrorMessage"] != null)
-    {
-    <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
-        @ViewData["ErrorMessage"]
+        @if (ViewData["ErrorMessage"] != null)
+        {
+            <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
+                @ViewData["ErrorMessage"]
+            </div>
+        }
     </div>
-    }
-</div>
+}
 
 <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
     <form method="post" asp-controller="poi" asp-action="submit">
@@ -55,7 +51,7 @@
         </div>
         
         <div class="mt-2 py-4 relative z-10">
-            <div class="flex justify-end gap-3 w-100">
+            <div class="flex justify-end gap-3 w-full">
                 <div class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600" onclick="confirmLeave()">
                     Cancel
                 </div>
@@ -67,11 +63,3 @@
         </div>
     </form>
 </div>
-
-<script>
-function confirmLeave() {
-    if (confirm("Are you sure you want to leave this page?")) {
-        window.location.href = "javascript:history.back()";
-    }
-}
-</script>
