--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
@@ -1,7 +1,7 @@
 ﻿@using LiveMapDashboard.Web.Models.Poi
 @model LiveMapDashboard.Web.Models.Poi.PoiCrudformViewModel
 
-<div class="mt-2">
+<div>
     <script src="~/js/park-place-markers-maplibre.js" asp-append-version="true" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.css" />
 
     <!-- Kaart -->
-    <div class="card w-full h-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700">
+    <div class="card w-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700 rounded-lg">
         <div class="card-body w-full h-full">
             <div id="map" class="h-[50vh] w-full rounded-lg"></div>
         </div>
