--- a/LiveMapDashboard.Web/wwwroot/css/styles.css
+++ b/LiveMapDashboard.Web/wwwroot/css/styles.css
@@ -7,13 +7,20 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-50: oklch(97.1% 0.013 17.38);
     --color-red-100: oklch(93.6% 0.032 17.717);
     --color-red-200: oklch(88.5% 0.062 18.334);
     --color-red-400: oklch(70.4% 0.191 22.216);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
+    --color-red-700: oklch(50.5% 0.213 27.518);
     --color-red-800: oklch(44.4% 0.177 26.899);
     --color-red-900: oklch(39.6% 0.141 25.723);
+    --color-yellow-50: oklch(98.7% 0.026 102.212);
+    --color-yellow-100: oklch(97.3% 0.071 103.193);
+    --color-yellow-500: oklch(79.5% 0.184 86.047);
+    --color-yellow-600: oklch(68.1% 0.162 75.834);
+    --color-yellow-700: oklch(55.4% 0.135 66.442);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-teal-100: oklch(95.3% 0.051 180.801);
     --color-teal-200: oklch(91% 0.096 180.426);
@@ -43,10 +50,12 @@
     --color-neutral-700: oklch(37.1% 0 0);
     --color-neutral-800: oklch(26.9% 0 0);
     --color-neutral-900: oklch(20.5% 0 0);
+    --color-neutral-950: oklch(14.5% 0 0);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-lg: 32rem;
+    --container-2xl: 42rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -55,6 +64,8 @@
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-medium: 500;
@@ -565,6 +576,9 @@
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
+  }
   .mt-auto {
     margin-top: auto;
   }
@@ -657,6 +671,14 @@
   .size-8 {
     width: calc(var(--spacing) * 8);
     height: calc(var(--spacing) * 8);
+  }
+  .size-11 {
+    width: calc(var(--spacing) * 11);
+    height: calc(var(--spacing) * 11);
+  }
+  .size-15\.5 {
+    width: calc(var(--spacing) * 15.5);
+    height: calc(var(--spacing) * 15.5);
   }
   .size-full {
     width: 100%;
@@ -900,6 +922,9 @@
   .gap-x-3 {
     column-gap: calc(var(--spacing) * 3);
   }
+  .gap-x-4 {
+    column-gap: calc(var(--spacing) * 4);
+  }
   .space-x-3 {
     :where(& > :not(:last-child)) {
       --tw-space-x-reverse: 0;
@@ -1039,6 +1064,9 @@
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
+  .border-red-50 {
+    border-color: var(--color-red-50);
+  }
   .border-red-200 {
     border-color: var(--color-red-200);
   }
@@ -1050,6 +1078,9 @@
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .border-yellow-50 {
+    border-color: var(--color-yellow-50);
   }
   .border-t-transparent {
     border-top-color: transparent;
@@ -1101,6 +1132,9 @@
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-white) 10%, transparent);
     }
+  }
+  .bg-yellow-100 {
+    background-color: var(--color-yellow-100);
   }
   .fill-black {
     fill: var(--color-black);
@@ -1279,6 +1313,10 @@
   .align-top {
     vertical-align: top;
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
@@ -1358,6 +1396,9 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-yellow-500 {
+    color: var(--color-yellow-500);
   }
   .capitalize {
     text-transform: capitalize;
@@ -1723,6 +1764,16 @@
       display: flex;
     }
   }
+  .sm\:h-15\.5 {
+    @media (width >= 40rem) {
+      height: calc(var(--spacing) * 15.5);
+    }
+  }
+  .sm\:w-15\.5 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 15.5);
+    }
+  }
   .sm\:w-full {
     @media (width >= 40rem) {
       width: 100%;
@@ -1758,6 +1809,11 @@
       justify-content: flex-start;
     }
   }
+  .sm\:p-10 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
   .sm\:px-6 {
     @media (width >= 40rem) {
       padding-inline: calc(var(--spacing) * 6);
@@ -1789,9 +1845,29 @@
       line-height: var(--tw-leading, var(--text-sm--line-height));
     }
   }
+  .md\:mx-auto {
+    @media (width >= 48rem) {
+      margin-inline: auto;
+    }
+  }
+  .md\:w-full {
+    @media (width >= 48rem) {
+      width: 100%;
+    }
+  }
+  .md\:max-w-2xl {
+    @media (width >= 48rem) {
+      max-width: var(--container-2xl);
+    }
+  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:gap-x-7 {
+    @media (width >= 48rem) {
+      column-gap: calc(var(--spacing) * 7);
     }
   }
   .md\:p-7 {
@@ -1836,6 +1912,16 @@
       border-color: var(--color-neutral-700);
     }
   }
+  .dark\:border-neutral-800 {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-neutral-800);
+    }
+  }
+  .dark\:border-red-600 {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-red-600);
+    }
+  }
   .dark\:border-red-900 {
     &:where(.dark, .dark *) {
       border-color: var(--color-red-900);
@@ -1844,6 +1930,11 @@
   .dark\:border-teal-900 {
     &:where(.dark, .dark *) {
       border-color: var(--color-teal-900);
+    }
+  }
+  .dark\:border-yellow-600 {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-yellow-600);
     }
   }
   .dark\:bg-blue-500 {
@@ -1879,6 +1970,16 @@
       }
     }
   }
+  .dark\:bg-neutral-950 {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-neutral-950);
+    }
+  }
+  .dark\:bg-red-700 {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-red-700);
+    }
+  }
   .dark\:bg-red-800\/10 {
     &:where(.dark, .dark *) {
       background-color: color-mix(in srgb, oklch(44.4% 0.177 26.899) 10%, transparent);
@@ -1893,6 +1994,16 @@
       @supports (color: color-mix(in lab, red, red)) {
         background-color: color-mix(in oklab, var(--color-teal-800) 10%, transparent);
       }
+    }
+  }
+  .dark\:bg-transparent {
+    &:where(.dark, .dark *) {
+      background-color: transparent;
+    }
+  }
+  .dark\:bg-yellow-700 {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-yellow-700);
     }
   }
   .dark\:fill-neutral-200 {
@@ -1910,6 +2021,11 @@
       color: var(--color-neutral-200);
     }
   }
+  .dark\:text-neutral-300 {
+    &:where(.dark, .dark *) {
+      color: var(--color-neutral-300);
+    }
+  }
   .dark\:text-neutral-400 {
     &:where(.dark, .dark *) {
       color: var(--color-neutral-400);
@@ -1918,6 +2034,11 @@
   .dark\:text-neutral-500 {
     &:where(.dark, .dark *) {
       color: var(--color-neutral-500);
+    }
+  }
+  .dark\:text-red-100 {
+    &:where(.dark, .dark *) {
+      color: var(--color-red-100);
     }
   }
   .dark\:text-red-500 {
@@ -1933,6 +2054,11 @@
   .dark\:text-white {
     &:where(.dark, .dark *) {
       color: var(--color-white);
+    }
+  }
+  .dark\:text-yellow-100 {
+    &:where(.dark, .dark *) {
+      color: var(--color-yellow-100);
     }
   }
   .dark\:placeholder-neutral-500 {
@@ -2105,6 +2231,14 @@
       &:focus {
         --tw-ring-color: var(--color-neutral-600);
       }
+    }
+  }
+  .hs-overlay-open\:mt-7 {
+    &.open {
+      margin-top: calc(var(--spacing) * 7);
+    }
+    .open & {
+      margin-top: calc(var(--spacing) * 7);
     }
   }
   .hs-overlay-open\:opacity-100 {
