--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiList/Default.cshtml
@@ -1,5 +1,11 @@
 ﻿@model LiveMapDashboard.Web.Models.Poi.PoiListViewModel
 
+<div class="py-4 flex justify-end">
+    <a asp-controller="Poi" asp-action="PoiCreateForm" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+        New Point Of Interest
+    </a>
+</div>
+
 <div class="flex flex-col">
     <div class="-m-1.5 overflow-x-auto">
         <div class="p-1.5 min-w-full inline-block align-middle">
