--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
@@ -39,6 +39,17 @@
     </div>
 
     <div class="mb-2">
+        <label for="image" class="block mb-2 text-sm font-medium dark:text-white">
+            Image (URL)
+        </label>
+
+        <input type="text" asp-for="Image" name="image" id="image"
+               class="border py-2.5 sm:py-3 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+               placeholder="Image (URL)" />
+        <span asp-validation-for="Image" class="text-sm text-red-600 mt-2"></span>
+    </div>
+
+    <div class="mb-2">
         <label for="description" class="block mb-2 text-sm font-medium dark:text-white">
             Description
         </label>
