--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
@@ -47,6 +47,8 @@
                class="border py-2.5 sm:py-3 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                placeholder="Image (URL)" />
         <span asp-validation-for="Image" class="text-sm text-red-600 mt-2"></span>
+
+        <img id="previewImage" class="mt-2" />
     </div>
 
     <div class="mb-2">
@@ -77,3 +79,5 @@
         <label for="wheelchair" class="text-sm text-gray-700 dark:text-white">Wheelchair accessible</label>
     </div>
 </div>
+
+<script src="~/js/poi.js" asp-append-version="true" type="module"></script>
