--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
@@ -48,7 +48,7 @@
                placeholder="Image (URL)" />
         <span asp-validation-for="Image" class="text-sm text-red-600 mt-2"></span>
 
-        <img id="previewImage" class="mt-2" />
+        <img id="previewImage" class="mt-2 w-full rounded-lg" />
     </div>
 
     <div class="mb-2">
