--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
@@ -66,7 +66,8 @@
         FormAction = "Delete",
         HiddenInputs = new Dictionary<string, string>
         {
-            { "CategoryName", category.CategoryName }
+            { "CategoryName", category.CategoryName },
+            { "NewValue", category.CategoryName }
         }
     };  
 
