--- a/LiveMapDashboard.Web/Views/RequestForChange/Form.cshtml
+++ b/LiveMapDashboard.Web/Views/RequestForChange/Form.cshtml
@@ -32,14 +32,15 @@
 }
 
 <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-    <form method="post" asp-controller="poi" asp-action="submit">
+    <form method="post" asp-controller="rfc" asp-action="approvalFormSubmit">
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
 
+        <input type="hidden" asp-for="Rfc.Id" />
         <input type="hidden" asp-for="CrudformViewModel.Id" />
-        <input type="hidden" asp-for="CrudformViewModel.Coordinate.Latitude" />
-        <input type="hidden" asp-for="CrudformViewModel.Coordinate.Longitude" />
         <input type="hidden" asp-for="CrudformViewModel.MapId" />
+        <input type="hidden" id="Coordinate_Latitude" asp-for="CrudformViewModel.Coordinate.Latitude" />
+        <input type="hidden" id="Coordinate_Longitude" asp-for="CrudformViewModel.Coordinate.Longitude" />
 
         <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
             @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_Map.cshtml", Model.CrudformViewModel)
@@ -55,7 +56,7 @@
             <div class="flex justify-end gap-3 w-full">
                 @if (!string.IsNullOrEmpty(Model.CrudformViewModel.Id))
                 {
-                    <a asp-controller="Poi" asp-action="Index" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
+                    <a asp-controller="rfc" asp-action="Index" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
                         Cancel
                     </a>
                 }
@@ -68,7 +69,7 @@
                 
                 <button type="submit"
                         class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-                    @(!string.IsNullOrEmpty(Model.CrudformViewModel.Id) ? "Update" : "Create")
+                    Approve
                 </button>
             </div>
         </div>
