--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
@@ -56,6 +56,13 @@
                            placeholder="@placeHolder"
                            value="@Model.CategoryName"/>
                     <span asp-validation-for="NewValue" class="text-sm text-red-600 mt-2"></span>
+
+                    <input type="text" asp-for="IconName" name="@nameof(Model.IconName)"
+                           id="iconName"
+                           class="border py-2.5 sm:py-2 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none mt-4"
+                           placeholder="Icon name"
+                           value="@Model.IconName" />
+                    <span asp-validation-for="IconName" class="text-sm text-red-600 mt-2"></span>
                 </div>
             </div>
         </div>
