--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -71,6 +71,20 @@
                 <div id="map" class="h-[50vh] w-full rounded-lg"></div>
             </div>
         </div>
+        <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
+            @Html.EditorFor(m => m.Image, new ViewDataDictionary(ViewData) {
+                { "Label", "Image (URL)" },
+            })
+
+            <div class="flex justify-center"> 
+                <div id="previewImageLoader" class="animate-spin size-6 border-3 border-current border-t-transparent text-blue-600 rounded-full dark:text-blue-500 hidden" role="status" aria-label="loading">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                
+                <img id="previewImage" class="mt-2 w-full rounded-lg hidden" alt="POI main image"/>
+                <p id="imagePreviewError" class="text-sm text-yellow-800 mt-2 hidden">Image at URL does not exist.</p>
+            </div>
+        </div>
     </div>
 }
 
@@ -111,7 +125,7 @@
                     { "Options", Model.Categories?.Select(c => c.CategoryName) },
                     { "Label", "Category" }
                 })
-
+                
                 @Html.EditorFor(m => m.Description, new ViewDataDictionary(ViewData) {
                     { "Placeholder", "Enter Description..." },
                     { "Label", "Description" },
@@ -174,4 +188,5 @@
             </div>
         </div>
     </form>
+    <script src="~/js/poi.js" asp-append-version="true" type="module"></script>
 }
