--- a/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
     <script>
         const BACKEND_URL = "@(backendConfiguration.Value?.Url ?? throw new ArgumentNullException("The given configuration was null"))";
-        const IMAGE_URL = "@(imageConfiguration.Value?.Url ?? throw new ArgumentNullException("The given configuration was null"))";
+        const IMAGE_SERVER_URL = "@(imageConfiguration.Value?.Url ?? throw new ArgumentNullException("The given configuration was null"))";
     </script>
 </head>
 <body class="bg-gray-50 dark:bg-neutral-900">
