--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LiveMapDashboard.Web.Models.Modal
+@using Microsoft.IdentityModel.Tokens
 @model LiveMapDashboard.Web.Models.Map.MapCrudformViewModel
 
 @{
@@ -79,7 +80,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-text-icon lucide-text shrink size-4"><path d="M15 18H3"/><path d="M17 6H3"/><path d="M21 12H3"/></svg>
         Details
     </button>
-    <button type="button" class="hs-tab-active:font-semibold hs-tab-active:border-blue-600 hs-tab-active:text-blue-600 py-4 px-1 inline-flex items-center gap-x-2 border-b-2 border-transparent text-sm whitespace-nowrap text-gray-500 hover:text-blue-600 focus:outline-hidden focus:text-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-400 dark:hover:text-blue-500" id="tab-with-map-background-item" aria-selected="false" data-hs-tab="#tab-with-map-background" aria-controls="tab-with-map-background" role="tab">
+    <button @(!Model.ImageUrl.IsNullOrEmpty() ? "" : "disabled" )  type="button" class="hs-tab-active:font-semibold hs-tab-active:border-blue-600 hs-tab-active:text-blue-600 py-4 px-1 inline-flex items-center gap-x-2 border-b-2 border-transparent text-sm whitespace-nowrap text-gray-500 hover:text-blue-600 focus:outline-hidden focus:text-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-400 dark:hover:text-blue-500" id="tab-with-map-background-item" aria-selected="false" data-hs-tab="#tab-with-map-background" aria-controls="tab-with-map-background" role="tab">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-icon lucide-map shrink size-4"><path d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"/><path d="M15 5.764v15"/><path d="M9 3.236v15"/></svg>
         Background
     </button>
@@ -118,15 +119,16 @@
             </div>
                 
             <!-- RIGHT -->
-            <form method="post" asp-controller="map" asp-action="submit" id="map_form">
+            <form method="post" asp-controller="map" asp-action="submit" id="map_form" enctype="multipart/form-data">
                 @Html.AntiForgeryToken()
                 <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
 
                 <input type="hidden" asp-for="Id" />
                 <input type="hidden" asp-for="Area" />
+                <input type="hidden" asp-for="ImageUrl" />
 
                 <div>
-                    <div class="mb-6 border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700 p-4 rounded-lg">
+                    <div class="mb-6 border border-gray-200 bg-white dark:bg-neutral-900 dark:border-neutral-700 p-4 rounded-lg">
                         @Html.EditorFor(m => m.Name, new ViewDataDictionary(ViewData) {
                             { "Placeholder", "Enter Name..." },
                             { "Label", "Name" }
@@ -134,41 +136,58 @@
                     </div>
 
                     <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
-                        @Html.EditorFor(m => m.ImageUrl, new ViewDataDictionary(ViewData) {
-                            { "Label", "Image (URL)" },
-                        })
+                        <div class="group flex flex-col bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
+                            <label for="imageUpload" class="flex flex-col items-center justify-center w-full cursor-pointer">
+                                <div class="flex flex-col items-center justify-center pt-5 pb-6">
+                                    <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
+                                    </svg>
+                                    <p class="mb-2 text-sm text-gray-500 dark:text-gray-400 font-semibold">Click to upload</p>
+                                </div>
+                                <input id="imageUpload" name="ImageFile" type="file" class="hidden" accept=".png, .jpg, .jpeg" />
+                            </label>
+                        </div>
+
                         <div class="flex justify-center">
                             <div id="previewImageLoader" class="animate-spin size-6 border-3 border-current border-t-transparent text-blue-600 rounded-full dark:text-blue-500 hidden" role="status" aria-label="loading">
                                 <span class="sr-only">Loading...</span>
                             </div>
 
-                            <img id="previewImage" class="mt-2 w-full rounded-lg hidden" alt="POI main image" />
+                            <img id="preview" class="mt-2 w-full rounded-lg hidden" alt="POI main image" />
                             <p id="imagePreviewError" class="text-sm text-yellow-800 mt-2 hidden">Image at URL does not exist.</p>
                         </div>
+
+                        @if (!Model.ImageUrl.IsNullOrEmpty())
+                        {
+                            <p class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Original Image</p>
+                            <img id="uploadedImage" class="mt-2 w-full rounded-lg" src="@Model.ImageUrl" />
+                        }
+
                     </div>
 
-                    <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
-                        <label class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Map geo coordinates</label>
-                        <p class="text-xs text-gray-500 dark:text-gray-400">In order to set the location of the given map image and its bounds, the exact bottom and top coordinates are needed. With this the map can be optimized for the user's experience. </p>
-
+                    <div class="hidden">
                         <div class="grid grid-cols-2 gap-4 mt-2">
                             @Html.EditorFor(m => m.TopLeft, new ViewDataDictionary(ViewData) {
                                 { "Label", "Top left" },
-                                { "Readonly", true }
+                                { "Readonly", true },
+                                { "Hidden", true }
                             })
                             @Html.EditorFor(m => m.TopRight, new ViewDataDictionary(ViewData) {
                                 { "Label", "Top right" },
-                                { "Readonly", true }
+                                { "Readonly", true },
+                                { "Hidden", true }
                             })
                         </div>
                         <div class="grid grid-cols-2 gap-4 mt-2">
                             @Html.EditorFor(m => m.BottomLeft, new ViewDataDictionary(ViewData) {
                                 { "Label", "Bottom left" },
-                                { "Readonly", true }
+                                { "Readonly", true },
+                                { "Hidden", true }
                             })
                             @Html.EditorFor(m => m.BottomRight, new ViewDataDictionary(ViewData) {
                                 { "Label", "Bottom right" },
-                                { "Readonly", true }
+                                { "Readonly", true },
+                                { "Hidden", true }
                             })
                         </div>
                     </div>
@@ -177,7 +196,7 @@
         </div>
     </div>
 
-    <script src="~/js/preview-map-image.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/preview-image.js" asp-append-version="true" type="module"></script>
     <script src="~/js/map/park-boundaries-maplibre.js" asp-append-version="true" type="module"></script>
         
     <div id="tab-with-map-background" class="hidden" role="tabpanel" aria-labelledby="tab-with-map-background-item">
